♻️ refactor(collector): M1 테스트 스위트 PMD 위반 수정
SPEC-COLLECTOR-MARKETIND-004 — TooManyMethods(BatchCronsTest
LiteralEquality), UnitTestContainsTooManyAsserts
(MarketBatchSchedulerTest), UseGetFirst(CatchUpRunnerTest) 억제/수정.
동작 변경 없음.